--- a/FAQ.html
+++ b/FAQ.html
@@ -61,7 +61,7 @@
                     <div class="panel-group traffic-faq" id="general-question">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <a href="#general-question-1" data-paren="#general-question" data-toggle="collapse">
+                                <a href="#general-question-1" data-parent="#general-question" data-toggle="collapse">
                                 The New Threat to Wolves in and Around Yellowstone ?
                             </a>
                             </div>
@@ -73,7 +73,7 @@
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <a href="#general-question-2" data-paren="#general-question" data-toggle="collapse">
+                                <a href="#general-question-2" data-parent="#general-question" data-toggle="collapse">
                             Hunting Mushrooms, and What Makes Some Glow in the Dark ?
                             </a>
                             </div>
@@ -85,7 +85,7 @@
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <a href="#general-question-3" data-paren="#general-question" data-toggle="collapse">
+                                <a href="#general-question-3" data-parent="#general-question" data-toggle="collapse">
                              6 Bots That Deliver Science and Serendipity on Twitter ?
                             </a>
                             </div>
@@ -97,7 +97,7 @@
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <a href="#general-question-4" data-paren="#general-question" data-toggle="collapse">
+                                <a href="#general-question-4" data-parent="#general-question" data-toggle="collapse">
                               Humans Lived in North America 130,000 Years Ago, Study Claims ?
                             </a>
                             </div>
@@ -109,7 +109,7 @@
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <a href="#general-question-5" data-paren="#general-question" data-toggle="collapse">
+                                <a href="#general-question-5" data-parent="#general-question" data-toggle="collapse">
 Broke a Glass? Someday You Might 3-D-Print a New One ?
                             </a>
                             </div>
@@ -121,7 +121,7 @@ Broke a Glass? Someday You Might 3-D-Print a New One ?
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <a href="#general-question-6" data-paren="#general-question" data-toggle="collapse">
+                                <a href="#general-question-6" data-parent="#general-question" data-toggle="collapse">
                               As Arctic Ice Vanishes, New Shipping Routes Open ?
                             </a>
                             </div>
@@ -133,7 +133,7 @@ Broke a Glass? Someday You Might 3-D-Print a New One ?
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <a href="#general-question-7" data-paren="#general-question" data-toggle="collapse">
+                                <a href="#general-question-7" data-parent="#general-question" data-toggle="collapse">
                                How Marching for Science Risks Politicizing It ?
                             </a>
                             </div>
@@ -150,7 +150,7 @@ Broke a Glass? Someday You Might 3-D-Print a New One ?
                     <div class="panel-group traffic-faq" id="general-question">
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <a href="#general-question-8" data-paren="#general-question" data-toggle="collapse">
+                                <a href="#general-question-8" data-parent="#general-question" data-toggle="collapse">
                               ZZika Twins: A Window Into Much More Than a Virus ?
                             </a>
                             </div>
@@ -162,7 +162,7 @@ Broke a Glass? Someday You Might 3-D-Print a New One ?
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <a href="#general-question-9" data-paren="#general-question" data-toggle="collapse">
+                                <a href="#general-question-9" data-parent="#general-question" data-toggle="collapse">
                                 Empirical Evidence: Cats Love People ?
                             </a>
                             </div>
@@ -174,7 +174,7 @@ Broke a Glass? Someday You Might 3-D-Print a New One ?
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <a href="#general-question-10" data-paren="#general-question" data-toggle="collapse">
+                                <a href="#general-question-10" data-parent="#general-question" data-toggle="collapse">
                                One Day, a Machine Will Smell Whether You’re Sick ?
                             </a>
                             </div>
@@ -186,7 +186,7 @@ Broke a Glass? Someday You Might 3-D-Print a New One ?
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <a href="#general-question-11" data-paren="#general-question" data-toggle="collapse">
+                                <a href="#general-question-11" data-parent="#general-question" data-toggle="collapse">
                                 Clues to Zika Damage Might Lie in Cases of Twins ?
                             </a>
                             </div>
@@ -198,7 +198,7 @@ Broke a Glass? Someday You Might 3-D-Print a New One ?
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <a href="#general-question-12" data-paren="#general-question" data-toggle="collapse">
+                                <a href="#general-question-12" data-parent="#general-question" data-toggle="collapse">
                                The Making of a Legacy: First Steps in the Trump Era ?
                             </a>
                             </div>
@@ -210,7 +210,7 @@ Broke a Glass? Someday You Might 3-D-Print a New One ?
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <a href="#general-question-13" data-paren="#general-question" data-toggle="collapse">
+                                <a href="#general-question-13" data-parent="#general-question" data-toggle="collapse">
                                 Cassini’s Images From Inside Saturn’s Rings?
                             </a>
                             </div>
@@ -222,7 +222,7 @@ Broke a Glass? Someday You Might 3-D-Print a New One ?
                         </div>
                         <div class="panel panel-default">
                             <div class="panel-heading">
-                                <a href="#general-question-14" data-paren="#general-question" data-toggle="collapse">
+                                <a href="#general-question-14" data-parent="#general-question" data-toggle="collapse">
                             Sowing Climate Doubt Among Schoolteachers ?
                             </a>
                             </div>
