--- a/index.html
+++ b/index.html
@@ -25,13 +25,42 @@
                 <div class="col-md-8 text-center">
                     <div class="main_menu">
                         <ul>
-                            <li><a href="">Home</a></li>
+                            <li><a href="">Home</a>
+                                <ul>
+                                    <li><a href="">home-2</a></li>
+                                    <li><a href="">home-3</a></li>
+                                    <li><a href="">home-4</a></li>
+                                </ul>
+                            </li>
                             <li><a href="">Features </a></li>
                             <li><a href="">Pages</a></li>
-                            <li><a href="">Services </a></li>
-                            <li><a href=""> Case Studies</a></li>
-                            <li><a href="">Blog </a></li>
-                            <li><a href="">Contact</a></li>
+                            <li><a href="">Services </a>
+                                <ul>
+                                    <li><a href="">service-v1</a></li>
+                                    <li><a href="">service-v2</a></li>
+                                    <li><a href="">service-details</a></li>
+                                    <li><a href="">service-details</a></li>
+                                    <li><a href="">service-details</a></li>
+                                </ul>
+                            </li>
+                            <li><a href=""> Case Studies</a>
+                                <ul>
+                                    <li><a href="">case-study-v1</a></li>
+                                    <li><a href="">case-study-v2</a></li>
+                                    <li><a href="">case-study-details</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="">Blog </a>
+                                <ul>
+                                    <li><a href="">single-blog</a></li>
+                                </ul>
+                            </li>
+                            <li><a href="">Contact</a>
+                                <ul>
+                                    <li><a href="">contact-v1</a></li>
+                                    <li><a href="">contact-v2</a></li>
+                                </ul>
+                            </li>
                         </ul>
                     </div>
                 </div>
@@ -258,7 +287,6 @@
             </div>
         </div>
     </div>
-    
     <div class="section-padding overflow-x-hidden">
         <div class="container">
             <div class="row">
@@ -296,7 +324,6 @@
             </div>
         </div>
     </div>
-
     <div class="cta-area">
         <div class="container">
             <div class="row">
@@ -309,7 +336,6 @@
             </div>
         </div>
     </div>
-
     <div class="section-padding">
         <div class="container">
             <div class="row">
