--- a/traffic/home-2.html
+++ b/traffic/home-2.html
@@ -42,7 +42,7 @@
                                             <div class="menu-cta">
                                                 <h4>Traffic is an <span>Awesome</span> Template</h4>
                                                 <img src="assets/img/logo.png" alt="">
-                                                <a href="" class="boxed-btn" target="_blank">Download Now</a>
+                                                <a href="" class="boxed-btn" target="_blank">Purchase Now</a>
                                             </div>
                                         </div>
                                         <div class="col-md-3">
@@ -53,7 +53,7 @@
                                                 <li><a href="services-v1.html">Service</a></li>
                                                 <li><a href="case-study-v1.html">Case-studies</a></li>
                                                 <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="Contact-v1.html">Contact</a></li>
+                                                <li><a href="Contact-us-v1.html">Contact</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3">
@@ -71,7 +71,7 @@
                                                 <li><a href="services-v2.html">Service style2</a></li>
                                                 <li><a href="case-study-v2.html">Case-studies 2</a></li>
                                                 <li><a href="case-study-details.html">Case-studies details</a></li>
-                                                <li><a href="Contact-v2.html">Contact 2</a></li>
+                                                <li><a href="Contact-us-v2.html">Contact 2</a></li>
                                                 <li><a href="qoute.html">Qoute</a></li>
                                                 <li><a href="Team.html">Team</a></li>
                                             </ul>
@@ -98,10 +98,10 @@
                                     <li><a href="blog-single.html">single-blog</a></li>
                                 </ul>
                             </li>
-                            <li><a href="Contact-v1.html">Contact</a>
+                            <li><a href="Contact-us-v1.html">Contact</a>
                                 <ul>
-                                    <li><a href="Contact-v1.html">Contact-v1</a></li>
-                                    <li><a href="Contact-v2.html">Contact-v2</a></li>
+                                    <li><a href="Contact-us-v1.html">Contact-us-v1</a></li>
+                                    <li><a href="Contact-us-v2.html">Contact-us-v2</a></li>
                                 </ul>
                             </li>
                         </ul>
