--- a/traffic/index.html
+++ b/traffic/index.html
@@ -70,7 +70,7 @@
                                                 <li><a href="services-v2.html">Service style2</a></li>
                                                 <li><a href="case-study-v2.html">Case-studies 2</a></li>
                                                 <li><a href="case-study-details.html">Case-studies details</a></li>
-                                                <li><a href="Contact-v2.html">Contact 2</a></li>
+                                                <li><a href="Contact-us-v2.html">Contact 2</a></li>
                                                 <li><a href="qoute.html">Qoute</a></li>
                                                 <li><a href="Team.html">Team</a></li>
                                             </ul>
@@ -99,8 +99,8 @@
                             </li>
                             <li><a href="Contact-v1.html">Contact</a>
                                 <ul>
-                                    <li><a href="Contact-v1.html">Contact-v1</a></li>
-                                    <li><a href="Contact-v2.html">Contact-v2</a></li>
+                                    <li><a href="Contact-us-v1.html">Contact-v1</a></li>
+                                    <li><a href="Contact-us-v2.html">Contact-us-v2</a></li>
                                 </ul>
                             </li>
                         </ul>
