--- a/traffic/Contact-us-v2.html
+++ b/traffic/Contact-us-v2.html
@@ -43,7 +43,7 @@
                                                 <div class="menu-cta">
                                                     <h4>Traffic is an <span>Awesome</span> Template</h4>
                                                     <img src="assets/img/logo.png" alt="">
-                                                    <a href="" class="boxed-btn">Download Now</a>
+                                                    <a href="" class="boxed-btn">Purchase Now</a>
                                                 </div>
                                             </div>
                                             <div class="col-md-3">
@@ -54,7 +54,7 @@
                                                     <li><a href="services-v1.html">Service</a></li>
                                                     <li><a href="case-study-v1.html">Case-studies</a></li>
                                                     <li><a href="blog.html">Blog</a></li>
-                                                    <li><a href="Contact-v1.html">Contact</a></li>
+                                                    <li><a href="Contact-us-1.html">Contact</a></li>
                                                 </ul>
                                             </div>
                                             <div class="col-md-3">
@@ -72,7 +72,7 @@
                                                     <li><a href="services-v2.html">Service style2</a></li>
                                                     <li><a href="case-study-v2.html">Case-studies 2</a></li>
                                                     <li><a href="case-study-details.html">Case-studies details</a></li>
-                                                    <li><a href="Contact-v2.html">Contact 2</a></li>
+                                                    <li><a href="Contact-us-2.html">Contact 2</a></li>
                                                     <li><a href="qoute.html">Qoute</a></li>
                                                     <li><a href="Team.html">Team</a></li>
                                                 </ul>
@@ -99,10 +99,10 @@
                                         <li><a href="blog-single.html">single-blog</a></li>
                                     </ul>
                                 </li>
-                                <li><a href="Contact-v1.html">Contact</a>
+                                <li><a href="Contact-us-1.html">Contact</a>
                                     <ul>
-                                        <li><a href="Contact-v1.html">Contact-v1</a></li>
-                                        <li><a href="Contact-v2.html">Contact-v2</a></li>
+                                        <li><a href="Contact-us-1.html">Contact-us-1</a></li>
+                                        <li><a href="Contact-us-2.html">Contact-us-2</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -115,7 +115,7 @@
             </div>
         </div>
     </div>
-    <div class="breadcroumb-area breadcroumb-bg-contact-v2">
+    <div class="breadcroumb-area breadcroumb-bg-Contact-us-2">
         <div class="container">
             <div class="row">
                 <div class="col-md-6 col-md-offset-3">
