--- a/traffic/home-4.html
+++ b/traffic/home-4.html
@@ -23,13 +23,13 @@
         <span class="menu-close"><i class="fa fa-close"></i></span>
         <h2 class="menu-logo"><a href="index-4.html">Traffic  </a></h2>
         <ul>
-            <li><a href="">Home</a></li>
-            <li><a href="">Features </a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="About-us.html">About us</a></li>
             <li><a href="">Pages</a></li>
-            <li><a href="">Services </a></li>
-            <li><a href="">Case Studies</a></li>
-            <li><a href="">Blog </a></li>
-            <li><a href="">Contact</a></li>
+            <li><a href="service-v1.html">Services </a></li>
+            <li><a href="ase-study-v1.html">Case Studies</a></li>
+            <li><a href="blog.html">Blog </a></li>
+            <li><a href="Contact-us-v1.html">Contact</a></li>
         </ul>
     </div>
 
