--- a/exam-1/index.html
+++ b/exam-1/index.html
@@ -159,7 +159,7 @@
                 <div class="col-md-4">
                     <div class="single-service-box">
                         <div class="service-icon">
-                            <i class="fa fa-search-plus""></i>
+                            <i class="fa fa-search-plus"></i>
                         </div>
                         <h3>Marketing Research</h3>
                         <p>impact scalab niche markets rather than collabora Interactively optimize fully tested data with Dramatically grow enterprise-wide
