--- a/exam-1/index.html
+++ b/exam-1/index.html
@@ -254,7 +254,7 @@
                                     <h4>Analytics 360 improving business decisions</h4>
                                     <p>Seamlessly extend worldwide internal or organic sources vis- team driven outside box thinking. Proactively drive technically sound.
                                     </p>
-                                    <a href="" class="case-study-more"><i class="fa fa-arrow-right"></i></a>
+                                    <a href="" class="case-study-more"><i class="fa fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -265,7 +265,7 @@
                                     <h4>Analytics 360 improving business decisions</h4>
                                     <p>Seamlessly extend worldwide internal or organic sources vis- team driven outside box thinking. Proactively drive technically sound.
                                     </p>
-                                    <a href="" class="case-study-more"><i class="fa fa-arrow-right"></i></a>
+                                    <a href="" class="case-study-more"><i class="fa fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -276,7 +276,7 @@
                                     <h4>Analytics 360 improving business decisions</h4>
                                     <p>Seamlessly extend worldwide internal or organic sources vis- team driven outside box thinking. Proactively drive technically sound.
                                     </p>
-                                    <a href="" class="case-study-more"><i class="fa fa-arrow-right"></i></a>
+                                    <a href="" class="case-study-more"><i class="fa fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -287,7 +287,7 @@
                                     <h4>Analytics 360 improving business decisions</h4>
                                     <p>Seamlessly extend worldwide internal or organic sources vis- team driven outside box thinking. Proactively drive technically sound.
                                     </p>
-                                    <a href="" class="case-study-more"><i class="fa fa-arrow-right"></i></a>
+                                    <a href="" class="case-study-more"><i class="fa fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -298,7 +298,7 @@
                                     <h4>Analytics 360 improving business decisions</h4>
                                     <p>Seamlessly extend worldwide internal or organic sources vis- team driven outside box thinking. Proactively drive technically sound.
                                     </p>
-                                    <a href="" class="case-study-more"><i class="fa fa-arrow-right"></i></a>
+                                    <a href="" class="case-study-more"><i class="fa fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -309,7 +309,7 @@
                                     <h4>Analytics 360 improving business decisions</h4>
                                     <p>Seamlessly extend worldwide internal or organic sources vis- team driven outside box thinking. Proactively drive technically sound.
                                     </p>
-                                    <a href="" class="case-study-more"><i class="fa fa-arrow-right"></i></a>
+                                    <a href="" class="case-study-more"><i class="fa fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
@@ -320,7 +320,7 @@
                                     <h4>Analytics 360 improving business decisions</h4>
                                     <p>Seamlessly extend worldwide internal or organic sources vis- team driven outside box thinking. Proactively drive technically sound.
                                     </p>
-                                    <a href="" class="case-study-more"><i class="fa fa-arrow-right"></i></a>
+                                    <a href="" class="case-study-more"><i class="fa fa-long-arrow-right"></i></a>
                                 </div>
                             </div>
                         </div>
