--- a/exam-1/Blog-single.html
+++ b/exam-1/Blog-single.html
@@ -71,7 +71,7 @@
                                                 <li><a href="services-v2.html">Service style2</a></li>
                                                 <li><a href="case-study-v2.html">Case-studies 2</a></li>
                                                 <li><a href="case-study-details.html">Case-studies details</a></li>
-                                                <li><a href="Contact-v2.html">Contact 2</a></li>
+                                                <li><a href="Contact-us-v2.html">Contact 2</a></li>
                                                 <li><a href="qoute.html">Qoute</a></li>
                                                 <li><a href="Team.html">Team</a></li>
                                             </ul>
@@ -83,7 +83,7 @@
                                 <ul>
                                     <li><a href="services-v1.html">Services 1</a></li>
                                     <li><a href="services-v2.html">Services 2</a></li>
-                                    <li><a href="services-details.html">Services details</a></li>
+                                    <li><a href="service-details.html">Service details</a></li>
                                 </ul>
                             </li>
                             <li><a href="case-study-v1.html"> Case Studies</a>
@@ -100,8 +100,8 @@
                             </li>
                             <li><a href="Contact-v1.html">Contact</a>
                                 <ul>
-                                    <li><a href="Contact-v1.html">Contact-v1</a></li>
-                                    <li><a href="Contact-v2.html">Contact-v2</a></li>
+                                     <li><a href="Contact-us-v1.html">Contact-v1</a></li>
+                                    <li><a href="Contact-us-v2.html">Contact-v2</a></li>
                                 </ul>
                             </li>
                         </ul>
@@ -134,7 +134,7 @@
                         <p>Lens that will give the impression of seeing the fish from the bottom of a huge cocktail glass. And that’s just one of many attractions and exhibits. Officials at the $305 million Phillip and Patricia Frost Museum of Science promise that it will be a vivid expression of modern scientific inquiry and exposition. Its opening follows a series of setbacks and lawsuits and a scramble to finish the 250,000-square-foot structure. At one point, the project ran precariously short of money. The museum high-profile opening is especially significant in a state s</p>
                         <p><img src="assets/img/single-blog.jpg" alt=""></p>
                         <h3>Top 5 reason to choose us</h3>
-                        <p>Mauna Loa, the biggest volcano on Earth — and one of the most active — covers half the Island of Hawaii. Just 35 miles to the northeast, Mauna Kea, known to native Hawaiians as Mauna a Wakea, rises nearly 14,000 feet above sea level. To them it repre sents a spiritual connection between our planet and the heavens above. These volcanoes, which have beguiled millions of tourists visiting the Hawaiian islands, have also plagued scientists with a long-running mystery: If they are so close together, how did they develop in two parallel tracks along the Hawaiian-Emperor chain formed over the same hot spot in the Pacific Ocean — and why are their chemical compositions so different? "We knew this was related to something much deeper, but we couldn’t see what,” said Tim Jones.</p>
+                        <p>Mauna Loa, the biggest volcano on Earth — and one of the most active — covers half the Island of Hawaii. Just 35 miles to the northeast, Mauna Kea, known to native Hawaiians as Mauna a Wakea, rises nearly 14,000 feet above sea level. To them it repre sents a spiritual connection between our planet and the heavens above. These volcanoes, which have beguiled millions of tourists visiting the Hawaiian islands, have also plagued scientists with a long-running mystery: If they are so close together, how did they develop in two parallel tracks along the Hawaiian-Emperor chain formed over the same hot spot in the Pacific Ocean — and why are their chemical compositions so different?"We knew this was related to something much deeper, but we couldn’t see what,” said Tim Jones.</p>
                         <div class="social-share">
                             <a class="facebook" href=""><i class="fa fa-facebook"></i>Share</a>
                             <a class="twitter" href=""><i class="fa fa-twitter"></i>Tweet</a>
@@ -157,16 +157,16 @@
                                 <form action="index-html">
                                     <div class="row">
                                         <div class="col-md-6">
-                                            <input type="text" placeholder=" Name " ">
+                                            <input type="text" placeholder=" Name"">
                                         </div>
-                                        <div class="col-md-6 ">
-                                            <input type="email " placeholder="Email ">
+                                        <div class="col-md-6">
+                                            <input type="email" placeholder="Email">
                                         </div>
                                     </div>
                                     <p>
-                                        <textarea name="comment " id="comment " placeholder="comment " cols="30 " rows="10 "></textarea>
+                                        <textarea name="comment" id="comment" placeholder="comment" cols="30" rows="10"></textarea>
                                     </p>
-                                    <input type="submit " value="Submit ">
+                                    <input type="submit" value="Submit">
                                 </form>
                             </div>
                         </div>
@@ -175,86 +175,86 @@
             </div>
         </div>
     </div>
-    <div class="cta-area theme-5 text-center ">
-        <div class="container ">
-            <div class="row ">
-                <div class="col-md-8 col-md-offset-2 ">
+    <div class="cta-area theme-5 text-center">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8 col-md-offset-2">
                     <h2>Create your own markeitng website</h2>
                     <p>Writers and stars of Veep have responded incredulously to the news an Australian politician required stitches Graham Perrett, a federal Labor MP in Queensland, was eating
                     </p>
-                    <a href=" " class="boxed-btn ">Buy Now</a>
+                    <a href="" class="boxed-btn">Buy Now</a>
                 </div>
             </div>
         </div>
     </div>
-    <div class="footer-area services-v1 ">
-        <div class="container ">
-            <div class="row ">
-                <div class="col-md-8 ">
-                    <div class="col-md-4 ">
+    <div class="footer-area services-v1">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-8">
+                    <div class="col-md-4">
                         <h4>Product</h4>
                         <ul>
-                            <li><a href=" ">Product</a></li>
-                            <li><a href=" ">Pricing</a></li>
-                            <li><a href=" ">Customers</a></li>
-                            <li><a href=" ">Page Builder</a></li>
-                            <li><a href=" ">What's new</a></li>
+                            <li><a href="">Product</a></li>
+                            <li><a href="">Pricing</a></li>
+                            <li><a href="">Customers</a></li>
+                            <li><a href="">Page Builder</a></li>
+                            <li><a href="">What's new</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4 ">
+                    <div class="col-md-4">
                         <h4>Company</h4>
                         <ul>
-                            <li><a href=" ">About us</a></li>
-                            <li><a href=" ">Try Demo</a></li>
-                            <li><a href=" ">Terms of service</a></li>
-                            <li><a href=" ">Page Builder</a></li>
-                            <li><a href=" ">Privacy policy</a></li>
+                            <li><a href="">About us</a></li>
+                            <li><a href="">Try Demo</a></li>
+                            <li><a href="">Terms of service</a></li>
+                            <li><a href="">Page Builder</a></li>
+                            <li><a href="">Privacy policy</a></li>
                         </ul>
                     </div>
-                    <div class="col-md-4 ">
+                    <div class="col-md-4">
                         <h4>Help Center</h4>
                         <ul>
-                            <li><a href=" ">Help centre</a></li>
-                            <li><a href=" ">Email Us</a></li>
-                            <li><a href=" ">Message Us</a></li>
-                            <li><a href=" ">Blog</a></li>
+                            <li><a href="">Help centre</a></li>
+                            <li><a href="">Email Us</a></li>
+                            <li><a href="">Message Us</a></li>
+                            <li><a href="">Blog</a></li>
                         </ul>
                     </div>
                 </div>
-                <div class="col-md-4 ">
+                <div class="col-md-4">
                     <h4>Sign Up to Our Weekly Newslater</h4>
-                    <div class="email-subscribe form ">
-                        <form action="index.html ">
-                            <input type="email " placeholder="Email Address ">
-                            <input type="submit " value="Sign Up ">
+                    <div class="email-subscribe form">
+                        <form action="index.html">
+                            <input type="email" placeholder="Email Address">
+                            <input type="submit" value="Sign Up">
                         </form>
                     </div>
                     <h4>Social</h4>
-                    <ul class="social-link ">
-                        <li><a href=" "><i class="fa fa-facebook "></i>Facebook</a></li>
-                        <li><a href=" "><i class="fa fa-twitter "></i>Twitter</a></li>
-                        <li><a href=" "><i class="fa fa-pinterest "></i>Pinterest</a></li>
-                        <li><a href=" "><i class="fa fa-linkedin "></i>Linkdin</a></li>
-                        <li><a href=" "><i class="fa fa-instagram "></i>Instagram</a></li>
+                    <ul class="social-link">
+                        <li><a href=""><i class="fa fa-facebook"></i>Facebook</a></li>
+                        <li><a href=""><i class="fa fa-twitter"></i>Twitter</a></li>
+                        <li><a href=""><i class="fa fa-pinterest"></i>Pinterest</a></li>
+                        <li><a href=""><i class="fa fa-linkedin"></i>Linkdin</a></li>
+                        <li><a href=""><i class="fa fa-instagram"></i>Instagram</a></li>
                     </ul>
                 </div>
             </div>
         </div>
     </div>
-    <div class="copyright-area ">
-        <div class="container ">
-            <div class="row ">
-                <div class="col-md-12 text-center ">
+    <div class="copyright-area">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-12 text-center">
                     &copy;Traffic 2017. All rights reserved. Powered By crazycafe.
                 </div>
             </div>
         </div>
     </div>
-    <script src="assets/js/jquery.min.js "></script>
-    <script src="assets/js/bootstrap.min.js "></script>
-    <script src="assets/js/owl.carousel.min.js "></script>
-     <script src="assets/js/jquery.magnific-popup.min.js "></script>
-    <script src="assets/js/main.js "></script>
+    <script src="assets/js/jquery.min.js"></script>
+    <script src="assets/js/bootstrap.min.js"></script>
+    <script src="assets/js/owl.carousel.min.js"></script>
+     <script src="assets/js/jquery.magnific-popup.min.js"></script>
+    <script src="assets/js/main.js"></script>
 </body>
 
 </html>
