--- a/exam-1/home-3.html
+++ b/exam-1/home-3.html
@@ -72,7 +72,7 @@
                                                 <li><a href="services-v2.html">Service style2</a></li>
                                                 <li><a href="case-study-v2.html">Case-studies 2</a></li>
                                                 <li><a href="case-study-details.html">Case-studies details</a></li>
-                                                <li><a href="Contact-v2.html">Contact 2</a></li>
+                                                <li><a href="Contact-us-v2.html">Contact 2</a></li>
                                                 <li><a href="qoute.html">Qoute</a></li>
                                                 <li><a href="Team.html">Team</a></li>
                                             </ul>
@@ -84,7 +84,7 @@
                                 <ul>
                                     <li><a href="services-v1.html">Services 1</a></li>
                                     <li><a href="services-v2.html">Services 2</a></li>
-                                    <li><a href="services-details.html">Services details</a></li>
+                                    <li><a href="service-details.html">Service details</a></li>
                                 </ul>
                             </li>
                             <li><a href="case-study-v1.html"> Case Studies</a>
@@ -101,8 +101,8 @@
                             </li>
                             <li><a href="Contact-v1.html">Contact</a>
                                 <ul>
-                                    <li><a href="Contact-v1.html">Contact-v1</a></li>
-                                    <li><a href="Contact-v2.html">Contact-v2</a></li>
+                                     <li><a href="Contact-us-v1.html">Contact-v1</a></li>
+                                    <li><a href="Contact-us-v2.html">Contact-v2</a></li>
                                 </ul>
                             </li>
                         </ul>
