--- a/exam-1/qoute.html
+++ b/exam-1/qoute.html
@@ -72,7 +72,7 @@
                                                     <li><a href="services-v2.html">Service style2</a></li>
                                                     <li><a href="case-study-v2.html">Case-studies 2</a></li>
                                                     <li><a href="case-study-details.html">Case-studies details</a></li>
-                                                    <li><a href="Contact-v2.html">Contact 2</a></li>
+                                                    <li><a href="Contact-us-v2.html">Contact 2</a></li>
                                                     <li><a href="qoute.html">Qoute</a></li>
                                                     <li><a href="Team.html">Team</a></li>
                                                 </ul>
@@ -84,7 +84,7 @@
                                     <ul>
                                         <li><a href="services-v1.html">Services 1</a></li>
                                         <li><a href="services-v2.html">Services 2</a></li>
-                                        <li><a href="services-details.html">Services details</a></li>
+                                        <li><a href="service-details.html">Service details</a></li>
                                     </ul>
                                 </li>
                                 <li><a href="case-study-v1.html"> Case Studies</a>
@@ -101,8 +101,8 @@
                                 </li>
                                 <li><a href="Contact-v1.html">Contact</a>
                                     <ul>
-                                        <li><a href="Contact-v1.html">Contact-v1</a></li>
-                                        <li><a href="Contact-v2.html">Contact-v2</a></li>
+                                         <li><a href="Contact-us-v1.html">Contact-v1</a></li>
+                                        <li><a href="Contact-us-v2.html">Contact-v2</a></li>
                                     </ul>
                                 </li>
                             </ul>
@@ -134,14 +134,15 @@
                                 <h3>Free Seo Analysis for you</h3>
                                 <p>The recording starts with the patter of a summer squall. Later, a drifting tone like that of not-quite-tuned-in radio station rises and for a while drowns out the patter. These are sounds encountered by NASA’s Cassini spacecraft as it dove through the gap between Saturn and its innermost ring on April 26, the first of 22 such encounters before it will plunge into Saturn’s atmosphere in September.</p>
                                 <p>The recording starts with the patter of a summer squall. Later, a drifting tone like that of not-quite-tuned-in radio station rises and for a while drowns out the patter. These are sounds encountered .</p>
+                                <p>The recording starts with the patter of a summer squall. Later, a drifting tone like that of not-quite-tuned-in radio station rises and for a while drowns out the patter. These are sounds encountered .</p>
                             </div>
                         </div>
                         <div class="col-md-5 text-right">
-                            <div class="hero-form contact-form">
-                                <div class="hero-form-header">
+                            <div class="qoute-contact-form">
+                                <div class="qoute-form-header">
                                     <h3>Get Your SEO Score</h3> Grab your website seo score now
                                 </div>
-                                <div class="hero-form-wrapper">
+                                <div class="qoute-form-wrapper">
                                     <form action="">
                                         <p>
                                             <input type="text" placeholder="Your Name">
@@ -174,7 +175,7 @@
                     <img src="assets/img/contact-us.jpg" class="shadow-img" alt="">
                 </div>
                 <div class="col-md-7">
-                    <div class="contact-fom-heading">
+                    <div class="contact-form-heading">
                         <h3>Drop Us a line</h3>
                         <p>Sifting through teaspoons of clay and sand scraped from the floors of caves, German researchers have to be managed to isolate ancient human DNA without turning up a single bone.
                         </p>
