--- a/class-23/Blog-single.html
+++ b/class-23/Blog-single.html
@@ -53,7 +53,7 @@
                                                 <li><a href="services-v1.html">Service</a></li>
                                                 <li><a href="case-study-v1.html">Case-studies</a></li>
                                                 <li><a href="blog.html">Blog</a></li>
-                                                <li><a href="Contact-v1.html">Contact</a></li>
+                                                <li><a href="Contact-us-v1.html">Contact</a></li>
                                             </ul>
                                         </div>
                                         <div class="col-md-3">
@@ -98,7 +98,7 @@
                                     <li><a href="blog-single.html">single-blog</a></li>
                                 </ul>
                             </li>
-                            <li><a href="Contact-v1.html">Contact</a>
+                            <li><a href="Contact-us-v1.html">Contact</a>
                                 <ul>
                                      <li><a href="Contact-us-v1.html">Contact-v1</a></li>
                                     <li><a href="Contact-us-v2.html">Contact-v2</a></li>
